--- a/IntroToHtmlJan/FinalProj/styles.css
+++ b/IntroToHtmlJan/FinalProj/styles.css
@@ -1,5 +1,5 @@
     body {
-        background-image: url(Images/background.jpeg);
+        background: url(Images/background.jpeg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
