--- a/IntroToHtmlJan/FinalProj/styles.css
+++ b/IntroToHtmlJan/FinalProj/styles.css
@@ -1,10 +1,8 @@
     body {
-        background-image: url(images/background.jpeg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        margin: auto;
-        padding: auto;
+    background: url('Images/background.jpeg') no-repeat;
+    background-size: cover;
+    height: 100%;
+    margin: 5%;
         }
     
     h1 {
@@ -195,6 +193,12 @@
 
 /*Desktop Styles*/
 @media (min-width: 1200px) {
+        body {
+    background: url('Images/background.jpeg') no-repeat;
+    background-size: cover;
+    height: 100%;
+    margin: 5%;
+        }
     #lilyvalley {
         width: 20%;
         float: right;
